--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "Adminbot",
-  "version": "2.0.0",
+  "name": "adminbot",
+  "version": "2.1.0",
   "description": "Discord bot for IW4M Admin",
   "main": "index.js",
   "author": "Sparker",
   "license": "ISC",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "discord.js": "^12.2.0",
     "enmap": "^5.3.1",
