--- a/config.json
+++ b/config.json
@@ -2,8 +2,7 @@
   "token": "",
   "prefix": "!",
   "admin_id": "",
-  "presence_update_interval": "",
-  "presence_template": "",
+  "custom_presence": "",
   "colour": "",
   "thumbnail_image_url": "",
   "footer": "",
