--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
   "admin_id": "",
   "results_perpage": "10",
   "custom_presence": "with {p}/{m} players across {s} servers",
-  "colour": "",
+  "color": "",
   "thumbnail_image_url": "",
   "footer": "",
   "ownerid": ""
