--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adminbot",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "Discord bot for IW4M Admin",
   "main": "index.js",
   "author": "Sparker",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/Sparker-99/Admin-bot.git"
+    "url": "https://github.com/Sparker-99/Admin-bot.git"
   },
   "dependencies": {
     "discord.js": "^12.5.1",
