server status implementation
- configurable channel to send status
- added time interval to send status to channel
- edit messageId if present or send new message

--- a/config.json
+++ b/config.json
@@ -8,5 +8,7 @@
   "color": "",
   "thumbnail_image_url": "",
   "footer": "",
-  "ownerid": ""
+  "ownerid": "",
+  "status_channel": "",
+  "status_delay": 10
 }
