--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Sparker",
   "license": "ISC",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,8 @@
     "node-json-db": "^1.1.0",
     "os": "^0.1.1",
     "string-table": "^0.1.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
