--- a/config.json
+++ b/config.json
@@ -5,6 +5,8 @@
   "admin_id": "",
   "results_perpage": "10",
   "custom_presence": "with {p}/{m} players across {s} servers",
+  "status_channel_id": "",
+  "statchan_update_interval": "300",
   "color": "",
   "thumbnail_image_url": "",
   "footer": "",
