--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adminbot",
-  "version": "3.0.2",
+  "version": "3.0.3",
   "description": "Discord bot for IW4M Admin",
   "main": "index.js",
   "author": "Sparker",
@@ -13,9 +13,9 @@
     "url": "https://github.com/Sparker-99/Admin-bot.git"
   },
   "dependencies": {
-    "discord.js": "^12.5.1",
-    "fs": "0.0.1-security",
-    "node-json-db": "^1.1.0",
+    "discord.js": "^12.5.3",
+    "fs": "^0.0.1-security",
+    "node-json-db": "^1.3.0",
     "os": "^0.1.1",
     "string-table": "^0.1.5"
   }
