--- a/package.json
+++ b/package.json
@@ -3,19 +3,33 @@
   "version": "3.0.7",
   "description": "Discord bot for IW4M Admin",
   "main": "index.js",
-  "author": "Sparker",
-  "license": "ISC",
   "scripts": {
     "start": "node index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Sparker-99/Admin-bot.git"
-  },
+  "keywords": [],
+  "author": "Sparker",
+  "license": "ISC",
   "dependencies": {
-    "discord.js": "^13.6.0",
+    "better-sqlite3": "^7.6.2",
+    "colors": "^1.4.0",
+    "discord-api-types": "^0.36.2",
+    "discord.js": "^14.5.0",
+    "moment": "^2.29.4",
+    "ms": "^2.1.3",
+    "node-fetch": "^2.6.7",
+    "pretty-ms": "^6.0.1",
+    "quick.db": "^9.0.5",
     "fs": "^0.0.1-security",
     "node-json-db": "^1.4.1",
     "string-table": "^0.1.5"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Sparker-99/Admin-bot.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Sparker-99/Admin-bot/issues"
+  },
+  "homepage": "https://github.com/Sparker-99/Admin-bot#readme",
+  "devDependencies": {}
 }
